[package]
name = "plato-event"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Event bus for PLATO nervous system publish/subscribe routing"

[dependencies]
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
serde_json = "1"

[lib]
path = "src/lib.rs"
